<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            app:layout_constraintLeft_toLeftOf="@id/etPassword"
            app:layout_constraintRight_toRightOf="@id/etPassword"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/btLogIn"
            android:layout_width="0dp"
            android:text="@string/log_in"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintLeft_toLeftOf="@id/etPassword"
            app:layout_constraintRight_toRightOf="@id/etPassword"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>